# Matrix_V_SDK

./: .gitignore  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  matrix_v_monolith.py  pyproject.toml  pytest.ini  requirements.txt
matrix_v_sdk/: __init__.py  verify_truth.py
matrix_v_sdk/benchmarks/: accuracy_analysis.py  complexity_analysis_sdk.py  comprehensive_benchmarks.py  metrics_suite.py  poc_benchmarks.py
matrix_v_sdk/core/: Cargo.toml
matrix_v_sdk/docs/: A_SERIES.md  BENCHMARKS.md  G_SERIES.md  INSTALL.md  MATRIX_OMEGA.md  MMP_SERIES.md  P_SERIES.md  Q_SERIES.md  RH_SERIES.md  S_SERIES.md  T_SERIES.md  USAGE.md  V_SERIES.md  X_SERIES.md  architecture.md  codebase_map.md
matrix_v_sdk/examples/: adaptive_inference_cuda.py  model_distribution_onnx.py  numpy_scale_invariance.py  parity_audit.py  sci_computing_sparse.py  secure_training_rns.py  test_tmatrix_rigor.py  tile_parity_audit.py  tmatrix_industrial_edge.py  tmatrix_resonant_shunting.py  tmatrix_secure_signature.py  trillion_stress_test.py
matrix_v_sdk/experiments/: README.md  exp01_jl_complexity.py  exp02_symbolic_convergence.py  exp03_dirichlet_sparsity.py  exp04_master_solver.py
matrix_v_sdk/extensions/: cuda_bridge.py  hf_bridge.py  jax_bridge.py  numba_bridge.py  onnx_bridge.py  safetensors_bridge.py  scipy_bridge.py  torch_bridge.py  utils.py
matrix_v_sdk/gvm/: bridge.py  core.py  math_utils.py
matrix_v_sdk/rust_core/: Cargo.toml
matrix_v_sdk/rust_core/src/: feistel.rs  hypervector.rs  lib.rs  rns.rs  spectral.rs  symbolic.rs  tmatrix.rs
matrix_v_sdk/scripts/: verify_integration.py  verify_poc_integration.py
tests/: conftest.py  deep_diagnostics.py  demo_exact_gradients.py  explore_anchored_depth.py  final_verification.py  test_omega_dispatch.py  test_symbolic_scale.py  verification_report.md  verify_advanced_extensions.py  verify_extensions.py  verify_hidden_gems.py  verify_monolith.py  verify_sdk_enhancement.py
(+104 files in other folders)
