[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix_v_sdk"
version = "0.1.0"
description = "Focused on alternate forms of Matrix multiplication utilizing RNS and geometric manifolds."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Kieran Vanderburgh"}
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
torch = ["torch"]
numba = ["numba"]
jax = ["jax", "jaxlib"]
all = ["torch", "numba", "jax", "jaxlib"]

[tool.setuptools]
packages = ["matrix_v_sdk", "matrix_v_sdk.vl", "matrix_v_sdk.extensions"]
package-dir = {"" = "."}
