[package]
name = "vld_core"
version = "0.1.0"
edition = "2021"
description = "Native Rust acceleration layer for the V-Series Matrix SDK"

[lib]
name = "vld_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
sha2 = "0.10"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
